--- a/seals-vol.vcxproj.filters
+++ b/seals-vol.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClInclude Include="filesystem.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="colours.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
