--- a/seals-vol.vcxproj.filters
+++ b/seals-vol.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="VolIterator.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ObjModel.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stb_image_write.h">
@@ -33,6 +36,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="colours.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ObjModel.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
